--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=7ZY3EfEFFN1ZBlspx8PyLwjB45LFTvsd"></script>
+  <script type="text/javascript" src="static/js/three.min.js"></script>
+  <script type="text/javascript" src="static/js/TweenMax.min.js"></script>
+  <!--<script type="text/javascript" src="static/js/prefixfree.min.js"></script>-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>projact</title>
