--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!--<script type="text/javascript" src="static/js/prefixfree.min.js"></script>-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>projact</title>
+  <title>bikeProjact</title>
 </head>
 <body>
 <div id="app"></div>
