--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <script type="text/javascript" src="static/js/three.min.js"></script>
   <script type="text/javascript" src="static/js/TweenMax.min.js"></script>
   <link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
+  
   <!--加载检索信息窗口-->
   <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.4/src/SearchInfoWindow_min.css" />
   <!--<script type="text/javascript" src="static/js/prefixfree.min.js"></script>-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>bikeProjact</title>
+  <title>雪河清活动平台</title>
 </head>
 <body>
 <div id="app"></div>
